[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/ConfirmationDialog.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Audio/dialog-pop-up-sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/button-press-sound.wav" type="AudioStream" id=4]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.02, 0.5, 1 )

[sub_resource type="DynamicFont" id=11]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.933333, 0.607843, 0.0235294, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 4 )
size = Vector3( 0.05, 0.2, 0.35 )

[sub_resource type="DynamicFont" id=12]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("ExitButton/Viewport")

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.1, 0.1, 0.175 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.117647, 0.564706, 0.937255, 1 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 0.05, 0.2, 0.35 )

[sub_resource type="DynamicFont" id=13]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("CancelButton/Viewport")

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.1, 0.1, 0.175 )

[node name="ConfirmationDialog" type="MeshInstance"]
mesh = SubResource( 1 )
material/0 = null
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 820, 410 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_outline_modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
custom_fonts/font = SubResource( 11 )
text = "The items and scores will be lost.
Are you sure you wanna exit the game?"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -1.7865e-08, 0, 0.3, 0, 0.109655, 0, -0.109655, 0, -4.88762e-08, 0.0502435, -0.00776674, -0.0144912 )
modulate = Color( 0.117647, 0.564706, 0.937255, 1 )
texture = SubResource( 2 )

[node name="ExitButton" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0340846, -0.05, 0.244828 )
mesh = SubResource( 3 )
material/0 = null

[node name="Viewport" type="Viewport" parent="ExitButton"]
size = Vector2( 300, 150 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="ExitButton/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 12 )
text = "Exit"

[node name="Sprite3D" type="Sprite3D" parent="ExitButton"]
transform = Transform( -7.86805e-09, 0, 1, 0, 0.18, 0, -0.18, 0, -4.37114e-08, 0.0301765, -0.0697169, -0.189221 )
texture = SubResource( 5 )

[node name="ExitButtonArea" type="Area" parent="ExitButton"]

[node name="CollisionShape" type="CollisionShape" parent="ExitButton/ExitButtonArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0735203, 0, 0 )
shape = SubResource( 8 )

[node name="CancelButton" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0322687, -0.05, -0.242444 )
mesh = SubResource( 7 )
material/0 = null

[node name="Viewport" type="Viewport" parent="CancelButton"]
size = Vector2( 300, 150 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="CancelButton/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 13 )
text = "Cancel"

[node name="Sprite3D" type="Sprite3D" parent="CancelButton"]
transform = Transform( -7.86805e-09, 0, 0.18, 0, 0.18, 0, -0.18, 0, -7.86805e-09, 0.0300612, -0.0707347, -0.145621 )
texture = SubResource( 9 )

[node name="CancelButtonArea" type="Area" parent="CancelButton"]

[node name="CollisionShape" type="CollisionShape" parent="CancelButton/CancelButtonArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0758514, 0, 0 )
shape = SubResource( 10 )

[node name="WaitTimer" type="Timer" parent="."]

[node name="DialogPupUpSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ButtonPressSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="ExitButton/ExitButtonArea" to="." method="_on_ExitButtonArea_area_entered"]
[connection signal="area_entered" from="CancelButton/CancelButtonArea" to="." method="_on_CancelButtonArea_area_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
